--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <!-- Copyright -->
             <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
                 © 2020 Copyright:
-                <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+                <a class="text-white"></a>
             </div>
             <!-- Copyright -->
         </footer>
